add_executable(cons1 cons1.cpp)
add_test(NAME cons1 COMMAND cons1)

add_executable(cons2 cons2.cpp)
add_test(NAME cons2 COMMAND cons2)

add_executable(cons3 cons3.cpp)
add_test(NAME cons3 COMMAND cons3)

add_executable(access1 access1.cpp)
add_test(NAME access1 COMMAND access1)

add_executable(access2 access2.cpp)
add_test(NAME access2 COMMAND access2)

